création du main, avec 2 p et un strong pour gestion differences couleurs et taille, validé

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             <i class="fa-solid fa-circle-half-stroke fa-2x"></i>
         </div>
     </header>
-   
+    <!-- organisé avec 2 p en raison de la difference couleur et taille police. Et un strong pour la couleur -->
+    <main>
+        <p>Hello,<br>
+        Je suis photographe d'art, <strong>créative & engagée.</strong>
+        </p>
+        <p id="lorem">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis augue magna. Fusce fringilla purus et sapien euismod ullamcorper. In lorem tellus, sollicitudin in feugiat sed, sodales vel leo.  
+        </p>
+    </main>
+    
 </body>
 
 </html>
