ajout du modele street

--- a/street/index.html
+++ b/street/index.html
@@ -35,15 +35,15 @@
     </main>
     
     <div id="image">
-        <img src="images/food9.avif" alt="photo plat de saumon">
-        <img src="images/food8.avif" alt="photo salade de fruits">
-        <img src="images/food7.avif" alt="photo petit dejeuner">
-        <img src="images/food6.avif" alt="photo hamburger">
-        <img src="images/food5.avif" alt="photo legumes facon tableau">
-        <img src="images/food4.avif" alt="photo plat de boulettes de viande">
-        <img src="images/food3.avif" alt="photo plat de spaghettis">
-        <img src="images/food2.avif" alt="photo de glaces roses">
-        <img src="images/food1.avif" alt="photo d'une partie d'une assiette viande et légumes">
+        <img src="street/images/street9.avif" alt="photo quartier d'affaire">
+        <img src="street/images/street8.avif" alt="photo quartier d'habitation à la nuit tombante">
+        <img src="street/images/street7.avif" alt="photo voie pietonne quartier commercial">
+        <img src="street/images/street6.avif" alt="photo vieux pick-up">
+        <img src="street/images/street5.avif" alt="photo voie pietonne amsterdam">
+        <img src="street/images/street4.avif" alt="photo quartier avec que des batiments blancs">
+        <img src="street/images/street3.avif" alt="photo pieton traversant la route">
+        <img src="street/images/street2.avif" alt="photo vélos posés sur un mur avec une fresque visage de femme">
+        <img src="street/images/street1.avif" alt="photo autoroute de nuit sous la pluie,avec effet de trainée des lumières des voitures">
     </div>
     <footer>
         <p>@2021 BRADLEY JACKSON</p>
