création footer, validé html, css. Et version desktop terminée.(ajout break point tablettes)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis augue magna. Fusce fringilla purus et sapien euismod ullamcorper. In lorem tellus, sollicitudin in feugiat sed, sodales vel leo.  
         </p>
     </main>
-    
+    <div id="filtre">
+        <p>NATURE</p>
+        <p>FOOD</p>
+        <p>ART</p>
+        <p>STREET</p>
+        <p>ANIMAL</p>
+    </div>
     <div id="image">
         <img src="images/food9.avif" alt="photo plat de saumon">
         <img src="images/food8.avif" alt="photo salade de fruits">
