--- a/street/index.html
+++ b/street/index.html
@@ -33,17 +33,23 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis augue magna. Fusce fringilla purus et sapien euismod ullamcorper. In lorem tellus, sollicitudin in feugiat sed, sodales vel leo.  
         </p>
     </main>
-    
+    <div id="filtre">
+        <p>NATURE</p>
+        <p>FOOD</p>
+        <p>ART</p>
+        <p>STREET</p>
+        <p>ANIMAL</p>
+        </div>
     <div id="image">
-        <img src="street/images/street9.avif" alt="photo quartier d'affaire">
-        <img src="street/images/street8.avif" alt="photo quartier d'habitation à la nuit tombante">
-        <img src="street/images/street7.avif" alt="photo voie pietonne quartier commercial">
-        <img src="street/images/street6.avif" alt="photo vieux pick-up">
-        <img src="street/images/street5.avif" alt="photo voie pietonne amsterdam">
-        <img src="street/images/street4.avif" alt="photo quartier avec que des batiments blancs">
-        <img src="street/images/street3.avif" alt="photo pieton traversant la route">
-        <img src="street/images/street2.avif" alt="photo vélos posés sur un mur avec une fresque visage de femme">
-        <img src="street/images/street1.avif" alt="photo autoroute de nuit sous la pluie,avec effet de trainée des lumières des voitures">
+        <img src="images/street9.avif" alt="photo quartier d'affaire">
+        <img src="images/street8.avif" alt="photo quartier d'habitation à la nuit tombante">
+        <img src="images/street7.avif" alt="photo voie pietonne quartier commercial">
+        <img src="images/street6.avif" alt="photo vieux pick-up">
+        <img src="images/street5.avif" alt="photo voie pietonne amsterdam">
+        <img src="images/street4.avif" alt="photo quartier avec que des batiments blancs">
+        <img src="images/street3.avif" alt="photo pieton traversant la route">
+        <img src="images/street2.avif" alt="photo vélos posés sur un mur avec une fresque visage de femme">
+        <img src="images/street1.avif" alt="photo autoroute de nuit sous la pluie,avec effet de trainée des lumières des voitures">
     </div>
     <footer>
         <p>@2021 BRADLEY JACKSON</p>
