--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" data-theme="light">
+<html lang="fr"  html[data-theme='dark']>
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
             <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-twitter fa-2x"></i>
             <i class="fa-brands fa-linkedin-in fa-2x"></i>
-            <i class="fa-solid fa-circle-half-stroke fa-2x"></i>
+            <button id="lightmode"><i class="fa-solid fa-circle-half-stroke fa-2x" alt="bouton pour dark et light mode"></i></button>
         </div>
     </header>
     <!-- organisé avec 2 p en raison de la difference couleur et taille police. Et un strong pour la couleur -->
