bouton animé dark mode

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-twitter fa-2x"></i>
             <i class="fa-brands fa-linkedin-in fa-2x"></i>
-            <button id="lightmode"><i class="fa-solid fa-circle-half-stroke fa-2x" alt="bouton pour dark et light mode"></i></button>
+            <button id="lightmode"><i class="fa-solid fa-circle-half-stroke fa-2x" alt="bouton dark light mode"></i></button>
         </div>
+
 
     </header>
     <!-- organisé avec 2 p en raison de la difference couleur et taille police. Et un strong pour la couleur -->
@@ -56,6 +57,7 @@
         <p>@2021 BRADLEY JACKSON</p>
         <p id="petit">MADE FOR TUTO.COM</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
