--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"  html[data-theme='dark']>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="light">
     <!-- organisé avec un h1 pour le nom et une div contenant toutes les images (en prevision du flex css) -->
     <header>
         <h1>Bradley Jackson</h1>
@@ -21,7 +21,7 @@
             <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-twitter fa-2x"></i>
             <i class="fa-brands fa-linkedin-in fa-2x"></i>
-            <button id="lightmode"><i class="fa-solid fa-circle-half-stroke fa-2x" alt="bouton dark light mode"></i></button>
+            <button id="lightmode" ><i class="fa-solid fa-circle-half-stroke fa-2x" alt="bouton dark light mode"></i></button>
         </div>
 
 
