retrait classe body html car m'affichait la page en light , alors que je veux le dark par defaut

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="light">
+<body>
     <!-- organisé avec un h1 pour le nom et une div contenant toutes les images (en prevision du flex css) -->
     <header>
         <h1>Bradley Jackson</h1>
